core1: migrate to jdk 11